[metadata]
name = dollynn
description = rudementary deep learning module from the ground up
author = Luke Sabor
license = MIT
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3

[options]
packages =
    dollynn
python_requires = >=3
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing = 
    pytest
    pytest-cov
    mypy
    flake8

[options.package_data]
dolly = py.typed

[flake8]
max-line-length = 99

[mypy]
mypy_path = "src"
check_untyped_defs = True
disallow_any_generics = True
ignore_missing_imports = True
no_implicit_optional = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
warn_unused_configs = True
no_implicit_reexport = True

[tool:pytest]
addopts = -Wi -raP
          --cov="src/dollynn"
          --cov-report html
          --cov-report term-missing:skip-covered
          --no-cov-on-fail
python_files = *test*

[coverage:run]
omit = *test*